# Industrial-Internet-Architecture-Lab---KU-Leuven-Year-4

./: README.md
ble_gateway/: CMakeLists.txt  README.rst  app.overlay  prj.conf
ble_gateway/src/: main.c
certs/client/control-server/: client.csr  client.key  control-client.crt
certs/client/influxdb/: client.csr  client.key  influxdb-client.crt
certs/client/raspberrypi/: client.csr  client.key  raspberrypi-client.crt
freebot/: .gitmodules  CMakeLists.txt  Kconfig  app.overlay  prj.conf  readme.md
freebot/lib/freebot/src/: fb_io.c
freebot/src/: bt_lbs.c  bt_lbs.h  main.c  my_nus_stuff.c  my_nus_stuff.h  uart_async_adapter.c  uart_async_adapter.h
internet_gateway/: Alarm_Server.py  pi_controller.py
server/: control-interface.py
